Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-04-11 Kimmo
 Fix assert caused by my checkin 2007-04-08 Remove couple of useless wrapper functions
  Src: MergeDoc.cpp

2007-04-11 Gal
 PATCH: [ 1697691 ] Syntax highlighting scheme as resource strings
  Src/Languages/*: Merge*.rc
  Src: Merge.rc MergeEditView.cpp resource.h

2007-04-10 Kimmo
 PATCH: [ 1694048 ] File filter for Symbian developers
  Filters new file: Symbian.flt

2007-04-10 Gal
 BUG: [ 1694102 ] Compare with comments bug
  Src: stringdiffs.cpp

2007-04-08 Kimmo
 Add Jeremy Dewey and Dan Pidcock to contributors.txt
  Docs/Users: Contributors.txt
 Remove couple of useless wrapper functions
  Src: MergeDoc.cpp MergeDoc.h

2007-04-08 Takashi
 BUG: [ 1694581 ] Need to limit window tab width
  Src/Common: MDITabBar.cpp

2007-04-07 Kimmo
 Fix building language files (buildall.bat)
  : buildall.bat

2007-04-04 WinMerge experimental release 2.7.3.3 (SVN revision 4234)

2007-04-04 Kimmo
 Remove expat and SCEW unicode targets from build batch
  : buildall.bat
 BUG: [ 1576168 ] Cannot find file filter path message is wrong
  Src: FileFiltersDlg.cpp
  Src/Languages/*: Merge*.rc
 Bump ShellExtension version to 1.12
  ShellExtension: ShellExtension.rc

2007-04-03 Kimmo
 PATCH: [ 1693113 ] Enable ShellExtension for folder backgrounds
  ShellExtension: WinMergeShell.cpp WinMergeShell.rgs
 BUG: [ 1693441 ] Compare by date (and size) broken in 2.7.3.2
  Src: DiffContext.cpp

2007-04-03 Takashi
 BUG: [ 1693275 ] File extension filter does not work correctly
  Src: FileFilterHelper.cpp

2007-04-02 Kimmo
 RFE: [ 1685190 ] Add 1 pixel margin to line numbers area
  Src/editlib: ccrystaltextview.cpp
 PATCH: [ 1693041 ] Fix couple of editor bugs
  Submitted by Jeremy Dewey
  editlib: ccrystaleditview.cpp ccrystaltextbuffer.cpp

2007-04-01 Tim
 PATCH: [ 1692033 ] Use SetResourceVersions.wsf with 3 version numbers
  Src: SetResourceVersions.wsf