@@ -26,14 +26,14 @@ public:
 	/**
 	* @brief Different states for compare procedure.
 	* These states form state-machine for directory compare. States go like:
-	* STATE_IDLE --> STATE_COLLECT --> STATE_COMPARE --> STATE_IDLE.
+	* STATE_IDLE --> STATE_START --> STATE_COMPARE --> STATE_IDLE.
 	* @note GUI doesn't change state, but only backend code. GUI must track
 	* state changes to update itself.
 	*/
 	enum CMP_STATE
 	{
 		STATE_IDLE, /**< No compare running */
-		STATE_COLLECT, /**< Collecting dir/filenames to compare */
+		STATE_START, /**< Start folder compare */
 		STATE_COMPARE, /**< Comparing collected items */
 	};
 
